# monorepo

./: collector.yaml
.github/workflows/: build_proxy.yml  deploy.yml
api/: go.mod  main.go
cdk/: .eslintrc.json  .prettierrc  eslint.config.mjs  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
cdk/lib/constructs/: api-lambda-construct.ts  cloudfront-construct.ts  cron-lambda-construct.ts  ecs-run-task-sync.ts  function-url-origin-with-oac.ts  s3-origin-with-oac.ts  sfn-construct.ts  ui-resources-construct.ts  update-database-task.ts
data/: configurations.json
go/api/: config_lambda.go  config_local.go  go.mod  go.sum  main.go
go/common/: airline.go  flight.go  flight_schedule.go  go.mod  go.sum  localdate.go  localdate_test.go  project.go  set.go  time.go  time_test.go  tuple.go  util.go  util_test.go
go/cron/: go.mod  go.sum  main.go
go/database/: Dockerfile  go.mod  go.sum  main.go  updater.go
go/proxy/: config_local.go  consts_local.go  consts_prod.go  go.mod  headers_local.go  headers_prod.go  main.go  proxy.go
protobuf/: connection_search_request.proto
ui/: .env  .eslintrc.json  .gitignore  eslint.config.mjs  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.ts
ui/public/: robots.txt  sitemap.xml  sitemap_static.xml
ui/src/: vite-env.d.ts
updater/: Dockerfile  README.md  pyproject.toml
updater/src/updater/: __init__.py  cli.py  config.py  job.py  sql_runner.py  storage.py  util.py
updater/src/updater/sql/: 11_load_raw_data.sql  12_update_database.sql  13_update_history.sql  schema.sql
(+266 files in other folders)
