[project]
name = "updater"
version = "0.1.0"
description = "ECS task skeleton for DuckDB-based data update jobs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.42.88",
    "duckdb[all]==1.5.1",
    "sqlglot==30.4.2",
]

[project.scripts]
updater = "updater.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/updater"]

[tool.hatch.build.targets.wheel.force-include]
"src/updater/sql" = "updater/sql"

[tool.uv]
package = true
